k8s/manifests/base-config/zfs-exporter/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zfs-exporter-deny-egress-only-http-ingress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: http
